# quick_read

./: .gitignore  .qmake.conf  AR_ASSERT.h  Presigned_Url_Text_File_Downloader.cpp  Presigned_Url_Text_File_Downloader.h  Presigned_Url_Text_File_Uploader.cpp  Presigned_Url_Text_File_Uploader.h  README.md  S3_Download_Url_Client.h  S3_Upload_Url_Client.h  TtsTextTools.cpp  TtsTextTools.h  Utf8ToName.cpp  Utf8ToName.h  listwidget.cpp  listwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mkproj_quick_read.bat  more_utf8_to_names.txt  package-lock.json  package.json  quick_read.pro  readingstatusanimator.cpp  readingstatusanimator.h  res.qrc  rules.ini  server.js  text_text.txt
projects/: .gitignore  README.md
projects/influx_cpp_writer/: CMakeLists.txt  README.md
projects/influx_cpp_writer/src/: main.cpp
projects/influx_python_reader/: README.md  main.py
public/: app.js  index.html
